# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall -std=c99 -O2 @fuse_CFLAGS@
AM_CXXFLAGS = --pedantic -Wall -O2 @fuse_CFLAGS@

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = sfsfssfsf flip_lowbits

sfsfssfsf_SOURCES = sfsfssfsf.cc sfsfssfsf.h pstat.c pstat.h
sfsfssfsf_LDADD = @fuse_LIBS@

flip_lowbits_SOURCES = flip_lowbits.c pstat.c pstat.h
